--- a/class.html
+++ b/class.html
@@ -4,8 +4,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>replit</title>
+    <title>Classes</title>
     <link href="classStyle.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/x-icon" href="images/Logo.png">
   </head>
 
   <body>
@@ -137,8 +138,10 @@
           </td>
           <td>
             <select id="slt6543">
-              <option value="freshman">freshman</option>
-              <option value="senior">senior</option>
+              <option value="Freshman">Freshman</option>
+              <option value="Sophmore">Sophmore</option>
+              <option value="Junior">Junior</option>
+              <option value="Senior">Senior</option>
             </select>
           </td>
           <td>
