--- a/itemlist.html
+++ b/itemlist.html
@@ -44,10 +44,10 @@
       <h4 id="Name">Jam</h4>
       <!--profile pic will display-->
       <div class="prof">
-        <button type="button" class="pfp" onclick="closeForm()"><img src="images/profile.png" width="80" alt="placeholder"></button>
+        <button type="button" class="pfp" onclick="closeForm()"><img src="Images/metalIcon.jpg" width="80" alt="placeholder"></button>
       </div>
       <!--displays the email-->
-      <h4 id="Email">jam.keefe</h4>
+      <h4 id="Email">jam@jpkeefehs.org</h4>
       <!--What type of account they have (student or admin)-->
       <h5 id="Account">Student Account</h5>
       <button type="button" class="btn Manage account" onclick="closeForm()">Manage Account</button> 
