--- a/login.html
+++ b/login.html
@@ -4,17 +4,15 @@
   <meta charset="UTF-8">
   <title>Login</title>
   <link href="loginpage.css" rel="stylesheet" type="text/css"/>
+  <link rel="icon" type="image/x-icon" href="images/Logo.png">
 </head>
 <body>
   <div class="loginBox">
     <img src="images/Logo.png" alt="KTI" width="350">
-    <form action="login.php" method="post">
+    <form id="loginForm" method="post">
       <div class="spacing">
-        <!--Grey outlined in the textbox-->
-        <input class="grey" type="email" id="email" name="email"  required  placeholder="Username" ><br><br>
-      
+        <input class="grey" type="email" id="email" name="email" required placeholder="Username"><br><br>
         <input class="grey" type="password" value="" id="myInput" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required><br><br>
-        <!--Shows the password thats hidden by default-->
         <p class="show"><input type="checkbox" onclick="myFunction()"><b>Show Password</p></b>
       </div>
       <div id="message">
@@ -23,29 +21,54 @@
         <p id="number" class="invalid">A <b>number</b></p>
         <p id="length" class="invalid">Minimum <b>8 characters</b></p>
       </div>
-      <!--Will send you to a different page if you forget your-->
       <a class="forgot" href="">forgot password</a>
-      <br></br>
-      <!--Login to the website-->
-      <button class="login" type="submit"><b>Login</button></b>
-      <br></br>
+      <br><br>
+      <button class="login" type="button" onclick="loginUser()"><b>Login</button></b>
+      <br><br>
+    </form>
   </div>
-    
+
   <script>
-  function myFunction() {
-    var x = document.getElementById("myInput");
-    if (x.type === "password") {
-      x.type = "text";
-    } else {
-      x.type = "password";
+    function myFunction() {
+      var x = document.getElementById("myInput");
+      if (x.type === "password") {
+        x.type = "text";
+      } else {
+        x.type = "password";
+      }
     }
-  }
-    function myFocus(x) {
-      x.style.background = "blue"
+
+    // AJAX login function
+    async function loginUser() {
+      // Get form values
+      var email = document.getElementById("email").value;
+      var password = document.getElementById("myInput").value;
+      console.log(email);
+      console.log(password);
+      // Prepare data to be sent to the backend
+      const url = "http://localhost:3000/login";
+      const fd = new FormData();
+      fd.append("email", email);
+      fd.append("password", password);
+      // Create AJAX request
+      try {
+      const response = await fetch(url, {method: "POST", 
+        body: fd, 
+        headers: 
+        {
+          "Content-Type": "multipart/form-data",
+        }
+      });
+      if (!response.ok) {
+        throw new Error(`Response status: ${response.status}`);
+      }
+
+    const json = await response.json();
+    console.log(json);
+    } catch (error) {
+      console.error(error.message);
     }
-    function myBlur(x) {
-      x.style.background = "white"
     }
-      </script>  
+  </script>
 </body>
 </html>
