--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
       console.log(email);
       console.log(password);
       // Prepare data to be sent to the backend
-      const url = "http://localhost:3000/login";
+      const url = "https://develmets.skiscratcher.com//login";
       const fd = new URLSearchParams({email: email, password: password});
       // Create AJAX request
       try {
@@ -62,11 +62,11 @@
         throw new Error(`Response status: ${response.status}`);
       }
 
-    const json = await response.json();
-    console.log(json);
-    } catch (error) {
-      console.error(error.message);
-    }
+      const json = await response.json();
+      console.log(json);
+      } catch (error) {
+        console.error(error.message);
+      }
     }
   </script>
 </body>
