--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
       console.log(email);
       console.log(password);
       // Prepare data to be sent to the backend
-      const url = "https://develmets.skiscratcher.com//login";
+      const url = "https://develmets.skiscratcher.com/login";
       const fd = new URLSearchParams({email: email, password: password});
       // Create AJAX request
       try {
