--- a/login.html
+++ b/login.html
@@ -12,62 +12,99 @@
     <form id="loginForm" method="post">
       <div class="spacing">
         <input class="grey" type="email" id="email" name="email" required placeholder="Username"><br><br>
-        <input class="grey" type="password" value="" id="myInput" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required><br><br>
-        <p class="show"><input type="checkbox" onclick="myFunction()"><b>Show Password</p></b>
+        <input class="grey" type="password" value="" id="myInput" name="password"
+          placeholder="Password"
+          pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+          title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+          required><br><br>
+        <p class="show">
+          <input type="checkbox" onclick="myFunction()">
+          <b>Show Password</b>
+        </p>
       </div>
+
       <div id="message">
         <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
         <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
         <p id="number" class="invalid">A <b>number</b></p>
         <p id="length" class="invalid">Minimum <b>8 characters</b></p>
       </div>
-      <a class="forgot" href="">forgot password</a>
+
+      <a class="forgot" href="">Forgot password</a>
       <br><br>
-      <button class="login" type="button" onclick="loginUser()"><b>Login</button></b>
+      <button class="login" type="button" onclick="loginUser()"><b>Login</b></button>
       <br><br>
     </form>
   </div>
 
   <script>
     function myFunction() {
-      var x = document.getElementById("myInput");
-      if (x.type === "password") {
-        x.type = "text";
-      } else {
-        x.type = "password";
-      }
+      const x = document.getElementById("myInput");
+      x.type = x.type === "password" ? "text" : "password";
     }
 
-    // AJAX login function
     async function loginUser() {
-      // Get form values
-      var email = document.getElementById("email").value;
-      var password = document.getElementById("myInput").value;
-      console.log(email);
-      console.log(password);
-      // Prepare data to be sent to the backend
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("myInput").value;
       const url = "https://develmets.skiscratcher.com/login";
-      const fd = new URLSearchParams({email: email, password: password});
-      // Create AJAX request
-      try {
-      const response = await fetch(url, {method: "POST", 
-        body: fd, 
-        credentials: "include",
-        headers: 
-        {
-          "Content-Type": "application/x-www-form-urlencoded",
-        }
-      });
-      if (!response.ok) {
-        throw new Error(`Response status: ${response.status}`);
-      }
+      const fd = new URLSearchParams({ email, password });
 
-      const json = await response.json();
-      console.log(json);
+      try {
+        const response = await fetch(url, {
+          method: "POST",
+          body: fd,
+          credentials: "include",
+          headers: {
+            "Content-Type": "application/x-www-form-urlencoded"
+          }
+        });
+
+        const text = await response.text();
+        console.log("Raw response:", text);
+
+        try {
+          const json = JSON.parse(text);
+          console.log("Parsed JSON:", json);
+
+          if (json.login === true) {
+            window.location.href = "https://develmets.skiscratcher.com/demo"; // 🔁 Redirect on success
+          } else {
+            alert("Login failed. Please check your email and password.");
+          }
+        } catch (e) {
+          console.error("Failed to parse JSON:", e);
+          alert("Unexpected response from server.");
+        }
+
       } catch (error) {
-        console.error(error.message);
+        console.error("Login error:", error.message);
+        alert("Login request failed. Please try again.");
       }
     }
+
+    window.onload = async function () {
+      try {
+        const response = await fetch("https://develmets.skiscratcher.com/session-check", {
+          method: "GET",
+          credentials: "include"
+        });
+
+        const contentType = response.headers.get("content-type");
+
+        if (contentType && contentType.includes("application/json")) {
+          const data = await response.json();
+          console.log("Session check:", data);
+
+          if (data.loggedIn) {
+            window.location.href = "https://develmets.skiscratcher.com/demo";
+          }
+        } else {
+          console.warn("Server did not return JSON.");
+        }
+      } catch (error) {
+        console.error("Session check failed:", error.message);
+      }
+    };
   </script>
 </body>
 </html>
