--- a/login.html
+++ b/login.html
@@ -44,43 +44,45 @@
     }
 
     async function loginUser() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("myInput").value;
-      const url = "https://develmets.skiscratcher.com/login";
-      const fd = new URLSearchParams({ email, password });
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("myInput").value;
+  const url = "https://develmets.skiscratcher.com/login";
+  const fd = new URLSearchParams({ email, password });
 
-      try {
-        const response = await fetch(url, {
-          method: "POST",
-          body: fd,
-          credentials: "include",
-          headers: {
-            "Content-Type": "application/x-www-form-urlencoded"
-          }
-        });
-
-        const text = await response.text();
-        console.log("Raw response:", text);
-
-        try {
-          const json = JSON.parse(text);
-          console.log("Parsed JSON:", json);
-
-          if (json.login === true) {
-            window.location.href = "itemlist.html"; // 🔁 Redirect on success
-          } else {
-            alert("Login failed. Please check your email and password.");
-          }
-        } catch (e) {
-          console.error("Failed to parse JSON:", e);
-          alert("Unexpected response from server.");
-        }
-
-      } catch (error) {
-        console.error("Login error:", error.message);
-        alert("Login request failed. Please try again.");
+  try {
+    const response = await fetch(url, {
+      method: "POST",
+      body: fd,
+      credentials: "include", // important for cookies
+      headers: {
+        "Content-Type": "application/x-www-form-urlencoded"
       }
+    });
+
+    const contentType = response.headers.get("content-type") || "";
+
+    if (!contentType.includes("application/json")) {
+      const html = await response.text();
+      console.error("Expected JSON, got HTML instead:\n", html);
+      alert("Server did not return JSON. Check server or credentials.");
+      return;
     }
+
+    const json = await response.json();
+    console.log("Login response:", json);
+
+    if (json.login === true) {
+      console.log("Redirecting to itemlist.html");
+      window.location.href = "itemlist.html";
+    } else {
+      alert("Login failed. Check your credentials.");
+    }
+  } catch (error) {
+    console.error("Login error:", error);
+    alert("Login request failed. Try again later.");
+  }
+}
+
 
     window.onload = async function () {
       try {
