--- a/login.html
+++ b/login.html
@@ -38,75 +38,45 @@
   </div>
 
   <script>
-    function myFunction() {
-      const x = document.getElementById("myInput");
-      x.type = x.type === "password" ? "text" : "password";
-    }
+  async function loginUser() {
+    const email = document.getElementById("email").value;
+    const password = document.getElementById("myInput").value;
+    const url = "https://develmets.skiscratcher.com/login";
+    const fd = new URLSearchParams({ email, password });
 
-    async function loginUser() {
-  const email = document.getElementById("email").value;
-  const password = document.getElementById("myInput").value;
-  const url = "https://develmets.skiscratcher.com/login";
-  const fd = new URLSearchParams({ email, password });
-
-  try {
-    const response = await fetch(url, {
-      method: "POST",
-      body: fd,
-      credentials: "include", // important for cookies
-      headers: {
-        "Content-Type": "application/x-www-form-urlencoded"
-      }
-    });
-
-    const contentType = response.headers.get("content-type") || "";
-
-    if (!contentType.includes("application/json")) {
-      const html = await response.text();
-      console.error("Expected JSON, got HTML instead:\n", html);
-      alert("Server did not return JSON. Check server or credentials.");
-      return;
-    }
-
-    const json = await response.json();
-    console.log("Login response:", json);
-
-    if (json.login === true) {
-      console.log("Redirecting to itemlist.html");
-      window.location.href = "itemlist.html";
-    } else {
-      alert("Login failed. Check your credentials.");
-    }
-  } catch (error) {
-    console.error("Login error:", error);
-    alert("Login request failed. Try again later.");
-  }
-}
-
-
-    window.onload = async function () {
-      try {
-        const response = await fetch("https://develmets.skiscratcher.com/session-check", {
-          method: "GET",
-          credentials: "include"
-        });
-
-        const contentType = response.headers.get("content-type");
-
-        if (contentType && contentType.includes("application/json")) {
-          const data = await response.json();
-          console.log("Session check:", data);
-
-          if (data.loggedIn) {
-            window.location.href = "itemlist.html";
-          }
-        } else {
-          console.warn("Server did not return JSON.");
+    try {
+      const response = await fetch(url, {
+        method: "POST",
+        body: fd,
+        credentials: "include",
+        headers: {
+          "Content-Type": "application/x-www-form-urlencoded"
         }
-      } catch (error) {
-        console.error("Session check failed:", error.message);
+      });
+
+      const contentType = response.headers.get("content-type") || "";
+      if (!contentType.includes("application/json")) {
+        const html = await response.text();
+        console.error("Expected JSON but got:", html);
+        alert("Login failed or server returned unexpected data.");
+        return;
       }
-    };
-  </script>
+
+      const json = await response.json();
+      console.log("Login response:", json);
+
+      if (json.login === true) {
+        console.log("Redirecting...");
+        window.location.href = "itemlist.html";
+      } else {
+        alert("Login failed. Check your credentials.");
+      }
+    } catch (error) {
+      console.error("Login error:", error);
+      alert("Login request failed.");
+    }
+  }
+</script>
+
 </body>
 </html>
