--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
   async function loginUser() {
     const email = document.getElementById("email").value;
     const password = document.getElementById("myInput").value;
-    const url = "https://develmets.skiscratcher.com/login";
+    const url = "https://ktimetalstest-gbh5b7dsexd8bhen.eastus-01.azurewebsites.net/login";
     const fd = new URLSearchParams({ email, password });
 
     try {
