--- a/login.html
+++ b/login.html
@@ -12,13 +12,13 @@
     <form id="loginForm" method="post">
       <div class="spacing">
         <input class="grey" type="email" id="email" name="email" required placeholder="Username"><br><br>
-        <input class="grey" type="password" value="" id="myInput" name="password"
+        <input class="grey" type="password" id="myInput" name="password"
           placeholder="Password"
           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-          title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+          title="Must contain at least one number, one uppercase and lowercase letter, and at least 8 or more characters"
           required><br><br>
         <p class="show">
-          <input type="checkbox" onclick="myFunction()">
+          <input type="checkbox" onclick="document.getElementById('myInput').type = this.checked ? 'text' : 'password'">
           <b>Show Password</b>
         </p>
       </div>
@@ -38,45 +38,67 @@
   </div>
 
   <script>
-  async function loginUser() {
-    const email = document.getElementById("email").value;
-    const password = document.getElementById("myInput").value;
-    const url = "https://develmets.skiscratcher.com/login";
-    const fd = new URLSearchParams({ email, password });
+    async function checkSession() {
+      try {
+        const response = await fetch("https://develmets.skiscratcher.com/session-check", {
+          method: "GET",
+          credentials: "include"
+        });
 
-    try {
-      const response = await fetch(url, {
-        method: "POST",
-        body: fd,
-        credentials: "include",
-        headers: {
-          "Content-Type": "application/x-www-form-urlencoded"
+        const contentType = response.headers.get("content-type") || "";
+        if (contentType.includes("application/json")) {
+          const data = await response.json();
+          console.log("Session check result:", data);
+          if (data.loggedIn === true) {
+            window.location.href = "itemlist.html";
+          }
+        } else {
+          console.warn("Non-JSON response from session check.");
         }
-      });
-
-      const contentType = response.headers.get("content-type") || "";
-      if (!contentType.includes("application/json")) {
-        const html = await response.text();
-        console.error("Expected JSON but got:", html);
-        alert("Login failed or server returned unexpected data.");
-        return;
+      } catch (error) {
+        console.error("Session check failed:", error.message);
       }
-
-      const json = await response.json();
-      console.log("Login response:", json);
-
-      if (json.login === true) {
-        console.log("Redirecting...");
-        window.location.href = "itemlist.html";
-      } else {
-        alert("Login failed. Check your credentials.");
-      }
-    } catch (error) {
-      console.error("Login error:", error);
-      alert("Login request failed.");
     }
-  }
-</script>
 
+    async function loginUser() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("myInput").value;
+      const url = "https://develmets.skiscratcher.com/login";
+      const fd = new URLSearchParams({ email, password });
+
+      try {
+        const response = await fetch(url, {
+          method: "POST",
+          body: fd,
+          credentials: "include",
+          headers: {
+            "Content-Type": "application/x-www-form-urlencoded"
+          }
+        });
+
+        const contentType = response.headers.get("content-type") || "";
+        if (!contentType.includes("application/json")) {
+          const html = await response.text();
+          console.error("Expected JSON but got:", html);
+          alert("Login failed or server returned unexpected data.");
+          return;
+        }
+
+        const json = await response.json();
+        console.log("Login response:", json);
+
+        if (json.login === true) {
+          window.location.href = "itemlist.html";
+        } else {
+          alert("Login failed. Check your credentials.");
+        }
+      } catch (error) {
+        console.error("Login error:", error);
+        alert("Login request failed.");
+      }
+    }
+
+    window.onload = checkSession;
+  </script>
 </body>
 </html>
