--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <link href="loginpage.css" rel="stylesheet" type="text/css"/>
   <link rel="icon" type="image/x-icon" href="images/Logo.png">
 </head>
-<body>
+<body onload="checkSession();">
   <div class="loginBox">
     <img src="images/Logo.png" alt="KTI" width="350">
     <form id="loginForm" method="post">
