--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
   <script>
     async function checkSession() {
       try {
-        const response = await fetch("https://develmets.skiscratcher.com/session-check", {
+        const response = await fetch("https://develmets.skiscratcher.com/login", {
           method: "GET",
           credentials: "include"
         });
