--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
         if (contentType.includes("application/json")) {
           const data = await response.json();
           console.log("Session check result:", data);
-          if (data.loggedIn === true) {
+          if (data.login === true) {
             window.location.href = "itemlist.html";
           }
         } else {
