--- a/itemlist.html
+++ b/itemlist.html
@@ -53,7 +53,7 @@
       <button type="button" class="btn Manage account" onclick="closeForm()">Manage Account</button> 
       <a href="login.html">
       <!--Log out of your account and bring you back to the login page--> 
-      <button type="button" class="btn logout">logout</button>
+      <button type="button" class="btn logout" onclick="logout()" >logout</button>
       </a>
       <!--Closes the profile button and goes back to the item page-->
       <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
@@ -138,7 +138,26 @@
         function closeForm() {
           document.getElementById("myForm").style.display = "none";
         }
+        async function logout() {
+          try {
+            // Call the remote backend logout endpoint
+            const response = await fetch("https://develmets.skiscratcher.com/logout", {
+              method: "POST", // or GET, depending on your backend
+              credentials: "include"
+            });
 
+            if (response.ok) {
+              console.log("Successfully logged out from remote server.");
+              window.location.href = "login.html";
+            } else {
+              console.warn("Remote logout failed:", response.status);
+            }
+          } catch (error) {
+            console.error("Logout request failed:", error);
+          }
+
+
+        }
 
         //Alert Invalid File Type Keeps Popping Up, No Preview Div Currently
         function fileValidation() { 
