--- a/itemlist.html
+++ b/itemlist.html
@@ -142,7 +142,7 @@
           try {
             // Call the remote backend logout endpoint
             const response = await fetch("https://develmets.skiscratcher.com/logout", {
-              method: "POST", // or GET, depending on your backend
+              method: "GET", // or GET, depending on your backend
               credentials: "include"
             });
 
