--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <link href="loginpage.css" rel="stylesheet" type="text/css"/>
   <link rel="icon" type="image/x-icon" href="images/Logo.png">
 </head>
-<body onload="checkSession();">
+<body>
   <div class="loginBox">
     <img src="images/Logo.png" alt="KTI" width="350">
     <form id="loginForm" method="post">
@@ -38,27 +38,31 @@
   </div>
 
   <script>
-    async function checkSession() {
-      try {
-        const response = await fetch("https://develmets.skiscratcher.com/loginInfo", {
-          method: "GET",
-          credentials: "include"
-        });
+    window.onload = async function () {
+  if (sessionStorage.getItem("justLoggedOut")) {
+    sessionStorage.removeItem("justLoggedOut");
+    console.log("Skipping session check after logout.");
+    return;
+  }
 
-        const contentType = response.headers.get("content-type") || "";
-        if (contentType.includes("application/json")) {
-          const data = await response.json();
-          console.log("Session check result:", data);
-          if (data.login === true) {
-            window.location.href = "itemlist.html";
-          }
-        } else {
-          console.warn("Non-JSON response from session check.");
-        }
-      } catch (error) {
-        console.error("Session check failed:", error.message);
+  try {
+    const response = await fetch("https://develmets.skiscratcher.com/session-check", {
+      method: "GET",
+      credentials: "include"
+    });
+
+    const contentType = response.headers.get("content-type");
+    if (contentType && contentType.includes("application/json")) {
+      const data = await response.json();
+      if (data.loggedIn) {
+        window.location.href = "itemlist.html";
       }
     }
+  } catch (error) {
+    console.error("Session check failed", error);
+  }
+};
+
 
     async function loginUser() {
       const email = document.getElementById("email").value;
@@ -98,7 +102,6 @@
       }
     }
 
-    window.onload = checkSession;
   </script>
 </body>
 </html>
