--- a/login.html
+++ b/login.html
@@ -39,14 +39,10 @@
 
   <script>
     window.onload = async function () {
-  if (sessionStorage.getItem("justLoggedOut")) {
-    sessionStorage.removeItem("justLoggedOut");
-    console.log("Skipping session check after logout.");
-    return;
-  }
+  
 
   try {
-    const response = await fetch("https://develmets.skiscratcher.com/session-check", {
+    const response = await fetch("https://develmets.skiscratcher.com/lonininfo", {
       method: "GET",
       credentials: "include"
     });
