--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
   
 
   try {
-    const response = await fetch("https://develmets.skiscratcher.com/lonininfo", {
+    const response = await fetch("https://develmets.skiscratcher.com/logininfo", {
       method: "GET",
       credentials: "include"
     });
