--- a/itemlist.html
+++ b/itemlist.html
@@ -86,6 +86,45 @@
   </div>
 
       <script>
+      async function loadTools() {
+        try {
+          const response = await fetch("https://develmets.skiscratcher.com/getTools", {
+            method: "GET",
+            credentials: "include"
+          });
+
+          if (!response.ok) {
+            console.error("Failed to fetch tools:", response.status);
+            return;
+          }
+
+          const tools = await response.json();
+
+          const container = document.querySelector(".grid-container");
+          container.innerHTML = ""; // Clear existing items
+
+          tools.forEach(tool => {
+            const cardBtn = document.createElement("button");
+            const cardBorder = document.createElement("div");
+            const innerCardText = document.createElement("p");
+
+            cardBorder.classList.add("border");
+            cardBtn.classList.add("grid-item");
+
+            innerCardText.innerText = `${tool.name} - Amount: ${tool.quantity}`;
+            cardBorder.appendChild(innerCardText);
+            cardBtn.appendChild(cardBorder);
+            container.appendChild(cardBtn);
+          });
+
+        } catch (error) {
+          console.error("Error loading tools:", error);
+        }
+      }
+
+  // Call loadTools when the page loads
+  window.addEventListener("DOMContentLoaded", loadTools);
+
         function itemSpawn() {
           //Simple check to make sure user input proper values into the card create
           var spawnCondition = document.getElementById("nameInput")
