--- a/itemlist.html
+++ b/itemlist.html
@@ -111,7 +111,7 @@
             cardBorder.classList.add("border");
             cardBtn.classList.add("grid-item");
 
-            innerCardText.innerText = `${tool.name} - Amount: ${tool.quantity}`;
+            innerCardText.innerText = `${tool.toolName} - Amount: ${tool.quantity}`;
             cardBorder.appendChild(innerCardText);
             cardBtn.appendChild(cardBorder);
             container.appendChild(cardBtn);
