--- a/itemlist.html
+++ b/itemlist.html
@@ -126,50 +126,77 @@ async function loadTools() {
   window.addEventListener("DOMContentLoaded", loadTools);
 
   async function itemSpawn() {
-  const nameInput = document.getElementById("nameInput").value.trim();
-  const quantityInput = document.getElementById("quantityInput").value.trim();
 
-  if (!nameInput || !quantityInput) {
+    
+    //Simple check to make sure user input proper values into the card create
+    var spawnCondition = document.getElementById("nameInput")
+    var spawnCondition2 = document.getElementById("quantityInput")
+
+    if (!nameInput || !quantityInput) {
     alert("Please fill in all fields.");
     return;
-  }
-
-  const newTool = {
-    toolName: nameInput,
-    quantity: quantityInput
-  };
-
-  try {
-    const response = await fetch("https://develmets.skiscratcher.com/addTool", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json"
-      },
-      credentials: "include", // needed if your backend uses session cookies
-      body: JSON.stringify(newTool)
-    });
-
-    if (response.ok) {
-      // Success: tool saved to backend
-      console.log("Tool added successfully");
-      closeItemForm();
-      await loadTools(); // reload tools from backend and show updated list
-    } else {
-      console.error("Failed to add tool:", response.status);
-      alert("Error adding tool. Please try again.");
     }
-  } catch (error) {
-    console.error("Error sending tool to backend:", error);
-    alert("Could not connect to the server.");
+
+    const newTool = {
+      toolName: nameInput,
+      quantity: quantityInput
+    };
+
+    try {
+      const response = await fetch("https://develmets.skiscratcher.com/addTool", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        credentials: "include", // needed if your backend uses session cookies
+        body: JSON.stringify(newTool)
+      });
+
+      if (response.ok) {
+        // Success: tool saved to backend
+        console.log("Tool added successfully");
+        closeItemForm();
+        await loadTools(); // reload tools from backend and show updated list
+      } else {
+        console.error("Failed to add tool:", response.status);
+        alert("Error adding tool. Please try again.");
+      }
+    } catch (error) {
+      console.error("Error sending tool to backend:", error);
+      alert("Could not connect to the server.");
+    }
+
+
+
+    if (spawnCondition.value != "" && spawnCondition2.value != "") {
+      //Creating a button, div, and text to place onto screen
+      var cardBtn = document.createElement("Button");
+      const cardBorder = document.createElement("div");
+      const innerCardText = document.createElement("p");
+
+      //Giving border a class for styling purposes
+      cardBorder.classList.add("border");
+      //Placing card into the grid-container in the HTMLs body
+      document.getElementsByClassName("grid-container")[0].appendChild(cardBtn);
+
+      //Inputting the name typed in and putting it into the text
+      innerCardText.innerText = document.getElementById('nameInput').value + " Amount: " + document.getElementById("quantityInput").value; 
+      //Inserting the text into the card
+      cardBorder.appendChild(innerCardText);
+
+      //Setting buttons class to grid-item for styling
+      cardBtn.setAttribute("class", "grid-item");
+      //Inserting the border into the card
+      cardBtn.appendChild(cardBorder);
+
+      //Setting all previous values the user typed into as blank to prepare for next card creation
+      spawnCondition.value = "";
+      document.getElementById("nameInput").value = spawnCondition.value;
+      document.getElementById("quantityInput").value = spawnCondition.value;
+      document.getElementById("imageInput").value = spawnCondition.value;
+      document.getElementById('imagePreview').innerHTML = '';
+    }
   }
-
-  // Clear form
-  document.getElementById("nameInput").value = "";
-  document.getElementById("quantityInput").value = "";
-  document.getElementById("imageInput").value = "";
-  document.getElementById("imagePreview").innerHTML = "";
-}
-
 
 
   function openItemForm() {
