--- a/itemlist.html
+++ b/itemlist.html
@@ -188,7 +188,7 @@ async function loadTools() {
       //Setting all previous values the user typed into as blank to prepare for next card creation
       spawnCondition.value = "";
       document.getElementById("nameInput").value = spawnCondition.value;
-      document.getElementById("quantityInput").value = spawnCondition2.value;
+      document.getElementById("quantityInput").value = spawnCondition.value;
       document.getElementById("imageInput").value = spawnCondition.value;
       document.getElementById('imagePreview').innerHTML = '';
     }
