--- a/itemlist.html
+++ b/itemlist.html
@@ -164,7 +164,7 @@ async function loadTools() {
 
 
 
-    if (spawnCondition.value != "" && spawnCondition2.value != "") {
+    if (spawnCondition.value != "") {
       //Creating a button, div, and text to place onto screen
       var cardBtn = document.createElement("Button");
       const cardBorder = document.createElement("div");
