--- a/itemlist.html
+++ b/itemlist.html
@@ -134,6 +134,7 @@ async function loadTools() {
 
     const newTool = {
       toolName: document.getElementById("nameInput").value,
+      quantity: document.getElementById("quantityInput").value
     };
 
 
