--- a/itemlist.html
+++ b/itemlist.html
@@ -132,32 +132,43 @@ async function loadTools() {
     var spawnCondition = document.getElementById("nameInput")
     var spawnCondition2 = document.getElementById("quantityInput")
 
+    const nameInput = document.getElementById("nameInput").value.trim();
+    const quantityInput = document.getElementById("quantityInput").value.trim();
+
+    if (!nameInput || !quantityInput) {
+      alert("Please fill in all fields.");
+      return;
+    }
+
     const newTool = {
-      toolName: document.getElementById("nameInput").value,
-      quantity: document.getElementById("quantityInput").value
+      toolName: nameInput,
+
+      quantity: quantityInput
     };
+
 
 
     try {
       const response = await fetch("https://develmets.skiscratcher.com/addTool", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        credentials: "include", 
-        body: JSON.stringify(newTool)
-      });
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  credentials: "include",
+  body: JSON.stringify(newTool)
+});
 
-      if (response.ok) {
-        // Success: tool saved to backend
-        console.log("Tool added successfully");
-        closeItemForm();
-        await loadTools(); // reload tools from backend and show updated list
-      } else {
-        console.error("Failed to add tool:", response.status);
-        alert("Error adding tool. Please try again.");
-      }
-    } catch (error) {
+const responseData = await response.text(); // log full response
+
+if (response.ok) {
+  console.log("Tool added successfully:", responseData);
+  closeItemForm();
+  await loadTools();
+} else {
+  console.error("Failed to add tool:", response.status, responseData);
+  alert("Error adding tool: " + responseData);
+}
+    }catch (error) {
       console.error("Error sending tool to backend:", error);
       alert("Could not connect to the server.");
     }
