--- a/itemlist.html
+++ b/itemlist.html
@@ -145,7 +145,7 @@ async function loadTools() {
   };
 
   try {
-    const response = await fetch("https://develmets.skiscratcher.com/addTool", {
+    const response = await fetch("https://develmets.skiscratcher.com/createToolType", {
       method: "POST",
       headers: {
         "Content-Type": "application/json"
