--- a/itemlist.html
+++ b/itemlist.html
@@ -131,7 +131,11 @@ async function loadTools() {
     var spawnCondition = document.getElementById("nameInput")
     var spawnCondition2 = document.getElementById("quantityInput")
     const nameInput = document.getElementById("nameInput").value.trim();
-  const quantityInput = document.getElementById("quantityInput").value.trim();
+    const quantityInput = document.getElementById("quantityInput").value.trim();
+
+    const fd = new URLSearchParams({ nameInput, quantityInput });
+
+
 
   if (!nameInput || !quantityInput) {
     alert("Please fill in all fields.");
@@ -147,8 +151,9 @@ async function loadTools() {
   try {
     const response = await fetch("https://develmets.skiscratcher.com/createToolType", {
       method: "POST",
+      body: fd,
       headers: {
-        "Content-Type": "application/json"
+        "Content-Type": "application/x-www-form-urlencoded"
       },
       credentials: "include",
       body: JSON.stringify(newTool)
