--- a/itemlist.html
+++ b/itemlist.html
@@ -133,7 +133,7 @@ async function loadTools() {
     const nameInput = document.getElementById("nameInput").value.trim();
     const quantityInput = document.getElementById("quantityInput").value.trim();
 
-    const fd = new URLSearchParams({ nameInput, quantityInput });
+    const fd = new URLSearchParams({ name: nameInput, quantity: quantityInput });
 
 
 
