--- a/login.html
+++ b/login.html
@@ -13,7 +13,9 @@
   <div class="loginBox">
     <form id="loginForm" method="post">
       <div class="spacing">
+        <h3>Email: </h3>
         <input class="grey" type="email" id="email" name="email" required placeholder="Username"><br><br>
+        <h3>Password: </h3>
         <input class="grey" type="password" id="myInput" name="password"
           placeholder="Password"
           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
