--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="logo">
       <img src="images/Logo.png" alt="Metals Storage Logo" />
-      <h1>METALS <span>STORAGE</span></h1>
+      <h1>METALS</h1>
     </div>
 
     <div class="login-box">
