--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
 
         <div class="show-password">
           <input type="checkbox" onclick="document.getElementById('myInput').type = this.checked ? 'text' : 'password'" />
-          <label>Show Password</label>
+          <p>Show Password</p>
         </div>
 
         <button type="button" class="login-button" onclick="loginUser()">Login</button>
