changed the css and the logo

--- a/itemlist.html
+++ b/itemlist.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Itemslist</title>
   <link href="itemstyle.css" rel="stylesheet" type="text/css"/>
-  <link rel="icon" type="image/x-icon" href="images/Logo.png">
+  <link rel="icon" type="image/x-icon" href="images/newlogo.png">
 
   <!--Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <nav>
     <!--KTI Logo and Title-->
     <p class="navMainText">
-      <img id="navImage" src="images/Logo.png" width="100" alt="drawing of a welder">
+      <img id="navImage" src="images/newlogo.png" width="100" alt="drawing of a welder">
       Keefe Tech Inventory
     </p>
 
