fixed some code

--- a/class.html
+++ b/class.html
@@ -101,22 +101,17 @@
           <label for="sEmail">Student Email</label><br>
           <input type="text" id="sEmail" name="sEmail" placeholder="Enter student email"><br>
           <label for="sClass">Class</label><br>
-          <input type="text" id="sClass" name="sClass" placeholder="Enter class name"><br>
+          <select id="sClass" name="sClass"></select><br>
           <button onclick="testAddStudent()">Add Student</button>
-        <table id="stdTable">
-          <tr>
-            <th>Student Name</th>
-            <th>Email</th>
-            <th>Class</th>
-            <th>Action</th>
-          </tr>
-          <tr id="add6543">
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
+          <table id="stdTable">
+            <tr>
+              <th>Student Name</th>
+              <th>Email</th>
+              <th>Class</th>
+              <th>Action</th>
+            </tr>
+          </table>
+        </div>
       </div>
     </main>
 
