--- a/itemlist.html
+++ b/itemlist.html
@@ -17,7 +17,7 @@
   <nav>
     <!--KTI Logo and Title-->
     <p class="navMainText">
-      <img id="navImage" src="images/newlogo.png" width="100" alt="drawing of a welder">
+      <img id="navImage" src="Images/newlogo.png" width="100" alt="drawing of a welder">
       Keefe Tech Inventory
     </p>
 
