create should work

--- a/itemlist.html
+++ b/itemlist.html
@@ -179,7 +179,7 @@ async function loadTools() {
   });
 
   try {
-    const response = await fetch("https://develmets.skiscratcher.com/createToolType", {
+    const response = await fetch("https://develmets.skiscratcher.com/createTool", {
       method: "POST",
       body: fd,
       headers: {
