--- a/itemlist.html
+++ b/itemlist.html
@@ -104,7 +104,7 @@ async function loadTools() {
         cardBorder.classList.add("border");
         cardBtn.classList.add("grid-item");
 
-        innerCardText.innerText = `${tool.toolName} - Amount: ${tool.quantity}`;
+        innerCardText.innerText = `${tool.toolName}`;
         cardBorder.appendChild(innerCardText);
 
         // Add Remove button inside the border
