added a tab to tools

--- a/class.html
+++ b/class.html
@@ -158,6 +158,7 @@
             <tr>
               <th>Student Name</th>
               <th>Email</th>
+              <th>Checked Out Tools</th>
             </tr>
           `;
           studentsByClass[cls].forEach(student => {
